[project]
authors = [{name="Xavier Dupré", email="xavier.dupre@gmail.com"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy>=2", "scikit-learn>=1.5", "scipy"]
description = "Points de détails liés au machine learning"
keywords = ["cython", "scikit-learn", "machine-learning"]
license = {file = "LICENSE.txt"}
name = "mlstatpy"
readme = "README.rst"
requires-python = ">=3.10"
version = "0.5.0"

[project.urls]
homepage = "https://sdpython.github.io/doc/mlstatpy/dev/"
documentation = "https://sdpython.github.io/doc/mlstatpy/dev/"
repository = "https://github.com/sdpython/mlstatpy/"
changelog = "https://sdpython.github.io/doc/mlstatpy/dev/CHANGELOGS.html"

[tool.rstcheck]
report_level = "INFO"
ignore_directives = [
    "autosignature",
    "autoclass",
    "autofunction",
    "automodule",
    "blogpost",
    "blogpostagg",
    "exref",
    "exreflist",
    "faqreflist",
    "gdot",
    "image-sg",
    "inheritance-diagram",
    "mathdef",
    "mathdeflist",
    "nbgallery",
    "nbgallerylink",
    "plot",
    "runpython",
    "tocdelay",
    "todoext",
    "todoextlist",
]
ignore_roles = ["epkg", "githublink", "issue"]
ignore_messages = [
    ".*Hyperlink target .* is not referenced.*",
    ".*Document or section may not begin with a transition.*",
    ".*Unknown target name: .*[0-9]{4}.*",
    ".*Duplicate explicit target name: .pdf..*",
    ".*Unexpected possible title overline or transition..*",
    #
    ".*Duplicate implicit target name: .((complétion)|(analyse de survie)|(régression linéaire))..*",
    ".*Duplicate implicit target name: .((courbe roc)|(diagramme de voronoï)|(régression logistique))..*",
    ".*kppv.rst:11[560].*",
    ".*rn_biblio.rst:7.*",
]

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    "build",
    "dist",
]

line-length = 88

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    #"D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    #"I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    #"N", # pep8-naming
    #"NPY", # modern numpy
    #"PERF", # Perflint
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    #"TID", # Disallow relative imports
    #"TRY", # flake8-try-except-raise
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"**" = [
    "B905",
    "C401", "C408", "C413",
    "RUF012", "RUF100", "RUF010",
    "SIM905", "SIM108", "SIM910", "SIM110", "SIM102", "SIM114", "SIM103",
    "UP015", "UP027", "UP031", "UP034", "UP032", "RUF051", "UP006", "UP035", "UP045", "UP007", "UP030", "UP038"
]
"_unittests/**" = ["SIM113", "RUF005", "E402"]
"**/plot*.py" = ["B018"]
"_doc/conf.py" = ["E501"]
"_doc/sphinxdoc/source/conf.py" = ["F821"]
"_doc/notebooks/dsgarden/**" = ["B007", "E402"]
"_doc/notebooks/metric/**" = ["C400", "RUF005", "B007", "C417"]
"_doc/notebooks/ml/**" = ["E402", "B007", "RUF005"]
"_doc/notebooks/nlp/**" = ["RUF005", "E501", "F811", "E401", "E402"]
"mlstatpy/__init__.py" = ["E501"]
"mlstatpy/graph/__init__.py" = ["F401"]
"mlstatpy/graph/graph_distance.py" = ["E731"]
"mlstatpy/image/detection_segment/__init__.py" = ["F401"]
"mlstatpy/ml/__init__.py" = ["F401"]
"mlstatpy/ml/ml_grid_benchmark.py" = ["E731"]
"mlstatpy/nlp/__init__.py" = ["F401"]
"mlstatpy/optim/__init__.py" = ["F401"]
